Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...a2106b7](https://github.com/cri-o/cri-o/compare/v1.20.0...a2106b7e6ad3f51e3fb4ce3334113c302f7bbac1) on Thu, 06 May 2021 00:31:26 UTC.
+[v1.20.0...4d40e65](https://github.com/cri-o/cri-o/compare/v1.20.0...4d40e65acb9639d167f78ac90e3691e1029934ea) on Thu, 06 May 2021 03:36:31 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.a2106b7e6ad3f51e3fb4ce3334113c302f7bbac1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a2106b7e6ad3f51e3fb4ce3334113c302f7bbac1.tar.gz)
-- [cri-o.arm64.a2106b7e6ad3f51e3fb4ce3334113c302f7bbac1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a2106b7e6ad3f51e3fb4ce3334113c302f7bbac1.tar.gz)
+- [cri-o.amd64.4d40e65acb9639d167f78ac90e3691e1029934ea.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.4d40e65acb9639d167f78ac90e3691e1029934ea.tar.gz)
+- [cri-o.arm64.4d40e65acb9639d167f78ac90e3691e1029934ea.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.4d40e65acb9639d167f78ac90e3691e1029934ea.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -74,6 +74,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - The installed cri-o.service file now attempts to be run before kubelet.service ([#4443](https://github.com/cri-o/cri-o/pull/4443), [@haircommander](https://github.com/haircommander))
 
 #### Bug or Regression
+ - Add support for `absent_mount_sources_to_reject`, which allows admins to configure paths that, when mounted into a container despite not existing on the host, causes a container creation request to fail. This is useful for paths like `/etc/hostname`, which causes trouble as a directory, but possibly shouldn't be created as a file either (in the case of a dynamic hostname). ([#4844](https://github.com/cri-o/cri-o/pull/4844), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O can't work with runc 1.0.0-rc93 because of an incorrectly specified list of capabilities ([#4828](https://github.com/cri-o/cri-o/pull/4828), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O would leak opened files for namespaces on a server restore ([#4758](https://github.com/cri-o/cri-o/pull/4758), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CollectMode wouldn't be set if the feature was backported to systemd (in RHEL/CentOS 7, for instance) ([#4563](https://github.com/cri-o/cri-o/pull/4563), [@haircommander](https://github.com/haircommander))
