--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...a5ee075](https://github.com/cri-o/cri-o/compare/v1.20.0...a5ee0755b300159cfd256e7f9d6e529802344684) on Fri, 07 May 2021 04:05:29 UTC.
+[v1.20.0...b509233](https://github.com/cri-o/cri-o/compare/v1.20.0...b50923340184932ea080634bef08c6fe22fe5742) on Fri, 07 May 2021 10:13:23 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.a5ee0755b300159cfd256e7f9d6e529802344684.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a5ee0755b300159cfd256e7f9d6e529802344684.tar.gz)
-- [cri-o.arm64.a5ee0755b300159cfd256e7f9d6e529802344684.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a5ee0755b300159cfd256e7f9d6e529802344684.tar.gz)
+- [cri-o.amd64.b50923340184932ea080634bef08c6fe22fe5742.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b50923340184932ea080634bef08c6fe22fe5742.tar.gz)
+- [cri-o.arm64.b50923340184932ea080634bef08c6fe22fe5742.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b50923340184932ea080634bef08c6fe22fe5742.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -315,7 +315,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/nxadm/tail: [v1.4.4 → v1.4.8](https://github.com/nxadm/tail/compare/v1.4.4...v1.4.8)
 - github.com/olekukonko/tablewriter: [v0.0.4 → v0.0.5](https://github.com/olekukonko/tablewriter/compare/v0.0.4...v0.0.5)
 - github.com/onsi/ginkgo: [v1.14.1 → v1.16.2](https://github.com/onsi/ginkgo/compare/v1.14.1...v1.16.2)
-- github.com/onsi/gomega: [v1.10.3 → v1.11.0](https://github.com/onsi/gomega/compare/v1.10.3...v1.11.0)
+- github.com/onsi/gomega: [v1.10.3 → v1.12.0](https://github.com/onsi/gomega/compare/v1.10.3...v1.12.0)
 - github.com/opencontainers/runc: [v1.0.0-rc90 → v1.0.0-rc93](https://github.com/opencontainers/runc/compare/v1.0.0-rc90...v1.0.0-rc93)
 - github.com/opencontainers/runtime-spec: [3e4195d → 7413a7f](https://github.com/opencontainers/runtime-spec/compare/3e4195d...7413a7f)
 - github.com/opencontainers/runtime-tools: [07406c5 → d1bf3e6](https://github.com/opencontainers/runtime-tools/compare/07406c5...d1bf3e6)
@@ -351,11 +351,12 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/lint: 738671d → 83fdc39
 - golang.org/x/mobile: d2bd2a2 → e6ae53a
 - golang.org/x/mod: v0.3.0 → v0.4.0
-- golang.org/x/net: 69a7880 → d523dce
+- golang.org/x/net: 69a7880 → 89ef3d9
 - golang.org/x/oauth2: 9fd6049 → 01de73c
 - golang.org/x/sync: 67f06af → 036812b
-- golang.org/x/sys: 5cba982 → 47abb65
+- golang.org/x/sys: 5cba982 → 04245dc
 - golang.org/x/term: ad39bd3 → 6a3ed07
+- golang.org/x/text: v0.3.4 → v0.3.6
 - golang.org/x/time: 3af7569 → f8bda1e
 - golang.org/x/tools: 079ba7b → v0.1.0
 - google.golang.org/api: v0.35.0 → v0.36.0
