--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...b509233](https://github.com/cri-o/cri-o/compare/v1.20.0...b50923340184932ea080634bef08c6fe22fe5742) on Fri, 07 May 2021 10:13:23 UTC.
+[v1.20.0...1b4e91d](https://github.com/cri-o/cri-o/compare/v1.20.0...1b4e91d2984787df38c11df11112b51c0ef3f420) on Fri, 07 May 2021 13:09:17 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.b50923340184932ea080634bef08c6fe22fe5742.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b50923340184932ea080634bef08c6fe22fe5742.tar.gz)
-- [cri-o.arm64.b50923340184932ea080634bef08c6fe22fe5742.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b50923340184932ea080634bef08c6fe22fe5742.tar.gz)
+- [cri-o.amd64.1b4e91d2984787df38c11df11112b51c0ef3f420.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1b4e91d2984787df38c11df11112b51c0ef3f420.tar.gz)
+- [cri-o.arm64.1b4e91d2984787df38c11df11112b51c0ef3f420.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1b4e91d2984787df38c11df11112b51c0ef3f420.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -299,6 +299,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/hashicorp/go-multierror: [v1.1.0 → v1.1.1](https://github.com/hashicorp/go-multierror/compare/v1.1.0...v1.1.1)
 - github.com/heketi/heketi: [c2e2a4a → v10.2.0+incompatible](https://github.com/heketi/heketi/compare/c2e2a4a...v10.2.0)
 - github.com/insomniacslk/dhcp: [ed3125c → cc9239a](https://github.com/insomniacslk/dhcp/compare/ed3125c...cc9239a)
+- github.com/json-iterator/go: [v1.1.10 → v1.1.11](https://github.com/json-iterator/go/compare/v1.1.10...v1.1.11)
 - github.com/julienschmidt/httprouter: [v1.2.0 → v1.3.0](https://github.com/julienschmidt/httprouter/compare/v1.2.0...v1.3.0)
 - github.com/kisielk/errcheck: [v1.2.0 → v1.5.0](https://github.com/kisielk/errcheck/compare/v1.2.0...v1.5.0)
 - github.com/klauspost/compress: [v1.11.2 → v1.12.2](https://github.com/klauspost/compress/compare/v1.11.2...v1.12.2)
