Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...7a7df87](https://github.com/cri-o/cri-o/compare/v1.20.0...7a7df87127ede57c26d666de9e926d6200637f95) on Sat, 08 May 2021 01:43:27 UTC.
+[v1.20.0...b96ea25](https://github.com/cri-o/cri-o/compare/v1.20.0...b96ea255a4c5f398defd554dd25de1def3c118e4) on Sat, 08 May 2021 04:02:11 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.7a7df87127ede57c26d666de9e926d6200637f95.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.7a7df87127ede57c26d666de9e926d6200637f95.tar.gz)
-- [cri-o.arm64.7a7df87127ede57c26d666de9e926d6200637f95.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.7a7df87127ede57c26d666de9e926d6200637f95.tar.gz)
+- [cri-o.amd64.b96ea255a4c5f398defd554dd25de1def3c118e4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b96ea255a4c5f398defd554dd25de1def3c118e4.tar.gz)
+- [cri-o.arm64.b96ea255a4c5f398defd554dd25de1def3c118e4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b96ea255a4c5f398defd554dd25de1def3c118e4.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -75,6 +75,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Bug or Regression
  - Add support for `absent_mount_sources_to_reject`, which allows admins to configure paths that, when mounted into a container despite not existing on the host, causes a container creation request to fail. This is useful for paths like `/etc/hostname`, which causes trouble as a directory, but possibly shouldn't be created as a file either (in the case of a dynamic hostname). ([#4844](https://github.com/cri-o/cri-o/pull/4844), [@haircommander](https://github.com/haircommander))
+ - Add the config field `internal_wipe` which moves the responsibility of wiping containers after a reboot and images after an upgrade from the external binary `crio wipe` to the main crio server. This has a handful of advantages, the main one being crio is now better able to cleanup CNI resources after a reboot. ([#4767](https://github.com/cri-o/cri-o/pull/4767), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O can't work with runc 1.0.0-rc93 because of an incorrectly specified list of capabilities ([#4828](https://github.com/cri-o/cri-o/pull/4828), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O would leak opened files for namespaces on a server restore ([#4758](https://github.com/cri-o/cri-o/pull/4758), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CollectMode wouldn't be set if the feature was backported to systemd (in RHEL/CentOS 7, for instance) ([#4563](https://github.com/cri-o/cri-o/pull/4563), [@haircommander](https://github.com/haircommander))
