Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...b96ea25](https://github.com/cri-o/cri-o/compare/v1.20.0...b96ea255a4c5f398defd554dd25de1def3c118e4) on Sat, 08 May 2021 04:02:11 UTC.
+[v1.20.0...d7e058b](https://github.com/cri-o/cri-o/compare/v1.20.0...d7e058b9f77c83ce0c2cce8f426278bd7ecc7833) on Mon, 10 May 2021 13:52:53 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.b96ea255a4c5f398defd554dd25de1def3c118e4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b96ea255a4c5f398defd554dd25de1def3c118e4.tar.gz)
-- [cri-o.arm64.b96ea255a4c5f398defd554dd25de1def3c118e4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b96ea255a4c5f398defd554dd25de1def3c118e4.tar.gz)
+- [cri-o.amd64.d7e058b9f77c83ce0c2cce8f426278bd7ecc7833.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d7e058b9f77c83ce0c2cce8f426278bd7ecc7833.tar.gz)
+- [cri-o.arm64.d7e058b9f77c83ce0c2cce8f426278bd7ecc7833.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d7e058b9f77c83ce0c2cce8f426278bd7ecc7833.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -55,6 +55,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   The static binary bundle now uses crun as default container runtime for CRI-O. ([#4552](https://github.com/cri-o/cri-o/pull/4552), [@saschagrunert](https://github.com/saschagrunert))
  - Added feature to allow the OCI seccomp BPF hook to trace containers into dedicated files by
   using the annotation key `io.containers.trace-syscall/container-name` ([#4544](https://github.com/cri-o/cri-o/pull/4544), [@saschagrunert](https://github.com/saschagrunert))
+ - Added secure metrics endpoint configuration options ([#4805](https://github.com/cri-o/cri-o/pull/4805), [@saschagrunert](https://github.com/saschagrunert))
  - Bump containers image to v5.10.1 ([#4519](https://github.com/cri-o/cri-o/pull/4519), [@QiWang19](https://github.com/QiWang19))
  - CRI-O does not return `<none>` placeholders for missing tags and digests any more when doing a `ListImages` RPC ([#4673](https://github.com/cri-o/cri-o/pull/4673), [@saschagrunert](https://github.com/saschagrunert))
  - Changed `VersionResponse.RuntimeApiVersion` to return either the `v1alpha2` or `v1` CRI API version ([#4473](https://github.com/cri-o/cri-o/pull/4473), [@saschagrunert](https://github.com/saschagrunert))
@@ -120,7 +121,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   There are several significant changes in release 1.1.0, this includes:
       - Experimental PKCS11 support enabled via ENV variable
       - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
- - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
