Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...f2ce981](https://github.com/cri-o/cri-o/compare/v1.20.0...f2ce981b76132e67cbdcb5969ade32d616d7f29e) on Fri, 14 May 2021 07:30:25 UTC.
+[v1.20.0...6eb13b1](https://github.com/cri-o/cri-o/compare/v1.20.0...6eb13b1b9265995ab62049711fc5aeb604ed389a) on Fri, 14 May 2021 09:52:12 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.f2ce981b76132e67cbdcb5969ade32d616d7f29e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f2ce981b76132e67cbdcb5969ade32d616d7f29e.tar.gz)
-- [cri-o.arm64.f2ce981b76132e67cbdcb5969ade32d616d7f29e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f2ce981b76132e67cbdcb5969ade32d616d7f29e.tar.gz)
+- [cri-o.amd64.6eb13b1b9265995ab62049711fc5aeb604ed389a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.6eb13b1b9265995ab62049711fc5aeb604ed389a.tar.gz)
+- [cri-o.arm64.6eb13b1b9265995ab62049711fc5aeb604ed389a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.6eb13b1b9265995ab62049711fc5aeb604ed389a.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -33,6 +33,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Dependency-Change
  - Default pause image is `k8s.gcr.io/pause:3.5` ([#4550](https://github.com/cri-o/cri-o/pull/4550), [@pacoxu](https://github.com/pacoxu))
+ - Update static binary bundle runc version to `v1.0.0-rc94`. ([#4882](https://github.com/cri-o/cri-o/pull/4882), [@saschagrunert](https://github.com/saschagrunert))
  - Updated cri-tools to v1.21.0 within static binary bundle ([#4742](https://github.com/cri-o/cri-o/pull/4742), [@saschagrunert](https://github.com/saschagrunert))
 
 #### API Change
@@ -121,7 +122,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   There are several significant changes in release 1.1.0, this includes:
       - Experimental PKCS11 support enabled via ENV variable
       - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
- - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
@@ -147,6 +148,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/casbin/casbin/v2: [v2.1.2](https://github.com/casbin/casbin/v2/tree/v2.1.2)
 - github.com/checkpoint-restore/checkpointctl: [a2024f5](https://github.com/checkpoint-restore/checkpointctl/tree/a2024f5)
 - github.com/checkpoint-restore/go-criu/v4: [v4.1.0](https://github.com/checkpoint-restore/go-criu/v4/tree/v4.1.0)
+- github.com/checkpoint-restore/go-criu/v5: [v5.0.0](https://github.com/checkpoint-restore/go-criu/v5/tree/v5.0.0)
 - github.com/clbanning/x2j: [8252494](https://github.com/clbanning/x2j/tree/8252494)
 - github.com/containerd/aufs: [v1.0.0](https://github.com/containerd/aufs/tree/v1.0.0)
 - github.com/containerd/btrfs: [v1.0.0](https://github.com/containerd/btrfs/tree/v1.0.0)
@@ -252,7 +254,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/StackExchange/wmi: [5d04971 → cbe6696](https://github.com/StackExchange/wmi/compare/5d04971...cbe6696)
 - github.com/alecthomas/units: [c3de453 → f65c72e](https://github.com/alecthomas/units/compare/c3de453...f65c72e)
 - github.com/cenkalti/backoff: [v2.1.1+incompatible → v2.2.1+incompatible](https://github.com/cenkalti/backoff/compare/v2.1.1...v2.2.1)
-- github.com/cilium/ebpf: [4032b1d → v0.4.0](https://github.com/cilium/ebpf/compare/4032b1d...v0.4.0)
+- github.com/cilium/ebpf: [4032b1d → v0.5.0](https://github.com/cilium/ebpf/compare/4032b1d...v0.5.0)
 - github.com/container-storage-interface/spec: [v1.2.0 → v1.3.0](https://github.com/container-storage-interface/spec/compare/v1.2.0...v1.3.0)
 - github.com/containerd/cgroups: [0dbf7f0 → v1.0.1](https://github.com/containerd/cgroups/compare/0dbf7f0...v1.0.1)
 - github.com/containerd/console: [c12b1e7 → v1.0.2](https://github.com/containerd/console/compare/c12b1e7...v1.0.2)
@@ -319,7 +321,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/olekukonko/tablewriter: [v0.0.4 → v0.0.5](https://github.com/olekukonko/tablewriter/compare/v0.0.4...v0.0.5)
 - github.com/onsi/ginkgo: [v1.14.1 → v1.16.2](https://github.com/onsi/ginkgo/compare/v1.14.1...v1.16.2)
 - github.com/onsi/gomega: [v1.10.3 → v1.12.0](https://github.com/onsi/gomega/compare/v1.10.3...v1.12.0)
-- github.com/opencontainers/runc: [v1.0.0-rc90 → v1.0.0-rc93](https://github.com/opencontainers/runc/compare/v1.0.0-rc90...v1.0.0-rc93)
+- github.com/opencontainers/runc: [v1.0.0-rc90 → v1.0.0-rc94](https://github.com/opencontainers/runc/compare/v1.0.0-rc90...v1.0.0-rc94)
 - github.com/opencontainers/runtime-spec: [3e4195d → 7413a7f](https://github.com/opencontainers/runtime-spec/compare/3e4195d...7413a7f)
 - github.com/opencontainers/runtime-tools: [07406c5 → d1bf3e6](https://github.com/opencontainers/runtime-tools/compare/07406c5...d1bf3e6)
 - github.com/opencontainers/selinux: [v1.6.0 → v1.8.1](https://github.com/opencontainers/selinux/compare/v1.6.0...v1.8.1)
@@ -357,7 +359,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/net: 69a7880 → 89ef3d9
 - golang.org/x/oauth2: 9fd6049 → 01de73c
 - golang.org/x/sync: 67f06af → 036812b
-- golang.org/x/sys: 5cba982 → 04245dc
+- golang.org/x/sys: 5cba982 → d19ff85
 - golang.org/x/term: ad39bd3 → 6a3ed07
 - golang.org/x/text: v0.3.4 → v0.3.6
 - golang.org/x/time: 3af7569 → f8bda1e
