--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...5fc8d30](https://github.com/cri-o/cri-o/compare/v1.20.0...5fc8d30eb8fc059b5368c1c5552c08f7a5b25dba) on Sat, 15 May 2021 09:27:05 UTC.
+[v1.20.0...81923cf](https://github.com/cri-o/cri-o/compare/v1.20.0...81923cfd1d523e49ce9ad1f000cb113b46d2e63a) on Sat, 15 May 2021 11:22:16 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.5fc8d30eb8fc059b5368c1c5552c08f7a5b25dba.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.5fc8d30eb8fc059b5368c1c5552c08f7a5b25dba.tar.gz)
-- [cri-o.arm64.5fc8d30eb8fc059b5368c1c5552c08f7a5b25dba.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.5fc8d30eb8fc059b5368c1c5552c08f7a5b25dba.tar.gz)
+- [cri-o.amd64.81923cfd1d523e49ce9ad1f000cb113b46d2e63a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.81923cfd1d523e49ce9ad1f000cb113b46d2e63a.tar.gz)
+- [cri-o.arm64.81923cfd1d523e49ce9ad1f000cb113b46d2e63a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.81923cfd1d523e49ce9ad1f000cb113b46d2e63a.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -115,6 +115,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Crio adds info level log of the physical image source. ([#4438](https://github.com/cri-o/cri-o/pull/4438), [@QiWang19](https://github.com/QiWang19))
  - Fix OOMs when using crun together with CPU Manager ([#4592](https://github.com/cri-o/cri-o/pull/4592), [@odinuge](https://github.com/odinuge))
  - Fixed a bug where image authentication failed from not finding the auth file. ([#4461](https://github.com/cri-o/cri-o/pull/4461), [@QiWang19](https://github.com/QiWang19))
+ - Raise a warning when creating a bind mount on the container root ([#4853](https://github.com/cri-o/cri-o/pull/4853), [@giuseppe](https://github.com/giuseppe))
  - Set conmon scope KillSignal to SIGPIPE ([#4560](https://github.com/cri-o/cri-o/pull/4560), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - This new release of ocicrypt contains new usable interfaces and thus is a new minor number. This issue details the notable features added as well as a checklist before making a new release that will be used by consuming projects. Target date for completion is 24th January.
   
@@ -122,7 +123,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   There are several significant changes in release 1.1.0, this includes:
       - Experimental PKCS11 support enabled via ENV variable
       - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
- - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
