--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...cc3edc7](https://github.com/cri-o/cri-o/compare/v1.20.0...cc3edc7ee57a2dfc2bcb7791e80071aaa5418ea0) on Mon, 17 May 2021 10:49:14 UTC.
+[v1.20.0...c309a6c](https://github.com/cri-o/cri-o/compare/v1.20.0...c309a6c637c602803d4924a07273292888e445aa) on Tue, 18 May 2021 09:22:23 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.cc3edc7ee57a2dfc2bcb7791e80071aaa5418ea0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.cc3edc7ee57a2dfc2bcb7791e80071aaa5418ea0.tar.gz)
-- [cri-o.arm64.cc3edc7ee57a2dfc2bcb7791e80071aaa5418ea0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.cc3edc7ee57a2dfc2bcb7791e80071aaa5418ea0.tar.gz)
+- [cri-o.amd64.c309a6c637c602803d4924a07273292888e445aa.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c309a6c637c602803d4924a07273292888e445aa.tar.gz)
+- [cri-o.arm64.c309a6c637c602803d4924a07273292888e445aa.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c309a6c637c602803d4924a07273292888e445aa.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -275,6 +275,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/coredns/corefile-migration: [v1.0.10 → v1.0.11](https://github.com/coredns/corefile-migration/compare/v1.0.10...v1.0.11)
 - github.com/coreos/go-iptables: [v0.4.5 → v0.5.0](https://github.com/coreos/go-iptables/compare/v0.4.5...v0.5.0)
 - github.com/coreos/go-systemd/v22: [v22.1.0 → v22.3.2](https://github.com/coreos/go-systemd/v22/compare/v22.1.0...v22.3.2)
+- github.com/creack/pty: [v1.1.11 → v1.1.12](https://github.com/creack/pty/compare/v1.1.11...v1.1.12)
 - github.com/cri-o/ocicni: [513ef78 → 541cf7c](https://github.com/cri-o/ocicni/compare/513ef78...541cf7c)
 - github.com/docker/docker: [bd33bbf → 646072e](https://github.com/docker/docker/compare/bd33bbf...646072e)
 - github.com/emicklei/go-restful: [v2.9.5+incompatible → v2.15.0+incompatible](https://github.com/emicklei/go-restful/compare/v2.9.5...v2.15.0)
