Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...c309a6c](https://github.com/cri-o/cri-o/compare/v1.20.0...c309a6c637c602803d4924a07273292888e445aa) on Tue, 18 May 2021 09:22:23 UTC.
+[v1.20.0...f497d50](https://github.com/cri-o/cri-o/compare/v1.20.0...f497d5004e8f2d903fa47e6d2e177c7237d861ff) on Tue, 18 May 2021 13:18:00 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.c309a6c637c602803d4924a07273292888e445aa.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c309a6c637c602803d4924a07273292888e445aa.tar.gz)
-- [cri-o.arm64.c309a6c637c602803d4924a07273292888e445aa.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c309a6c637c602803d4924a07273292888e445aa.tar.gz)
+- [cri-o.amd64.f497d5004e8f2d903fa47e6d2e177c7237d861ff.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f497d5004e8f2d903fa47e6d2e177c7237d861ff.tar.gz)
+- [cri-o.arm64.f497d5004e8f2d903fa47e6d2e177c7237d861ff.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f497d5004e8f2d903fa47e6d2e177c7237d861ff.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -123,7 +123,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   There are several significant changes in release 1.1.0, this includes:
       - Experimental PKCS11 support enabled via ENV variable
       - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
- - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
@@ -329,10 +329,12 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/opencontainers/selinux: [v1.6.0 → v1.8.1](https://github.com/opencontainers/selinux/compare/v1.6.0...v1.8.1)
 - github.com/openshift/imagebuilder: [v1.1.6 → v1.2.0](https://github.com/openshift/imagebuilder/compare/v1.1.6...v1.2.0)
 - github.com/pelletier/go-toml: [v1.2.0 → v1.8.1](https://github.com/pelletier/go-toml/compare/v1.2.0...v1.8.1)
+- github.com/pkg/diff: [5b29258 → 20ebb0f](https://github.com/pkg/diff/compare/5b29258...20ebb0f)
 - github.com/prometheus/client_golang: [v1.7.1 → v1.10.0](https://github.com/prometheus/client_golang/compare/v1.7.1...v1.10.0)
 - github.com/prometheus/common: [v0.10.0 → v0.18.0](https://github.com/prometheus/common/compare/v0.10.0...v0.18.0)
 - github.com/prometheus/procfs: [v0.2.0 → v0.6.0](https://github.com/prometheus/procfs/compare/v0.2.0...v0.6.0)
 - github.com/psampaz/go-mod-outdated: [v0.7.0 → v0.8.0](https://github.com/psampaz/go-mod-outdated/compare/v0.7.0...v0.8.0)
+- github.com/rogpeppe/go-internal: [v1.6.2 → v1.7.0](https://github.com/rogpeppe/go-internal/compare/v1.6.2...v1.7.0)
 - github.com/rootless-containers/rootlesskit: [v0.10.0 → v0.14.0-beta.0](https://github.com/rootless-containers/rootlesskit/compare/v0.10.0...v0.14.0-beta.0)
 - github.com/russross/blackfriday/v2: [v2.0.1 → v2.1.0](https://github.com/russross/blackfriday/v2/compare/v2.0.1...v2.1.0)
 - github.com/sendgrid/sendgrid-go: [v3.7.1+incompatible → v3.7.2+incompatible](https://github.com/sendgrid/sendgrid-go/compare/v3.7.1...v3.7.2)
@@ -361,8 +363,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/net: 69a7880 → 89ef3d9
 - golang.org/x/oauth2: 9fd6049 → 01de73c
 - golang.org/x/sync: 67f06af → 036812b
-- golang.org/x/sys: 5cba982 → d19ff85
-- golang.org/x/term: ad39bd3 → 6a3ed07
+- golang.org/x/sys: 5cba982 → 8803ae5
+- golang.org/x/term: ad39bd3 → a79de54
 - golang.org/x/text: v0.3.4 → v0.3.6
 - golang.org/x/time: 3af7569 → f8bda1e
 - golang.org/x/tools: 079ba7b → v0.1.0
@@ -405,7 +407,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - k8s.io/release: v0.6.0 → v0.7.0
 - k8s.io/system-validators: v1.2.0 → v1.4.0
 - k8s.io/utils: 67b214c → 2afb431
-- mvdan.cc/sh/v3: v3.2.0 → v3.2.4
+- mvdan.cc/editorconfig: e40951b → v0.2.0
+- mvdan.cc/sh/v3: v3.2.0 → v3.3.0
 - sigs.k8s.io/apiserver-network-proxy/konnectivity-client: v0.0.14 → v0.0.15
 - sigs.k8s.io/structured-merge-diff/v4: v4.0.2 → v4.1.0
 
