Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...a83474c](https://github.com/cri-o/cri-o/compare/v1.20.0...a83474c48099deb890a9dff22bbf2ec9edc28939) on Thu, 20 May 2021 19:59:21 UTC.
+[v1.20.0...e705872](https://github.com/cri-o/cri-o/compare/v1.20.0...e705872165f2f44d2e9ee40fc24ec42a19aad354) on Thu, 20 May 2021 22:05:36 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.a83474c48099deb890a9dff22bbf2ec9edc28939.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.a83474c48099deb890a9dff22bbf2ec9edc28939.tar.gz)
-- [cri-o.arm64.a83474c48099deb890a9dff22bbf2ec9edc28939.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.a83474c48099deb890a9dff22bbf2ec9edc28939.tar.gz)
+- [cri-o.amd64.e705872165f2f44d2e9ee40fc24ec42a19aad354.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.e705872165f2f44d2e9ee40fc24ec42a19aad354.tar.gz)
+- [cri-o.arm64.e705872165f2f44d2e9ee40fc24ec42a19aad354.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.e705872165f2f44d2e9ee40fc24ec42a19aad354.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -103,6 +103,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where CRI-O can't work with runc 1.0.0-rc93 because of an incorrectly specified list of capabilities ([#4831](https://github.com/cri-o/cri-o/pull/4831), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O would leak opened files for namespaces on a server restore ([#4795](https://github.com/cri-o/cri-o/pull/4795), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where `crio config` would print a string for `privileged_without_host_devices`, not a boolean ([#4829](https://github.com/cri-o/cri-o/pull/4829), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where server startup was significantly slowed down by attempting to clean up CNI resources after a reboot. ([#4934](https://github.com/cri-o/cri-o/pull/4934), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a segfault when CRI-O has takes more than 8 minutes to create a pod or container ([#4846](https://github.com/cri-o/cri-o/pull/4846), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed a bug where image authentication failed from not finding the auth file. ([#4461](https://github.com/cri-o/cri-o/pull/4461), [@QiWang19](https://github.com/QiWang19))
  - Fixed bug where it was not possible to run containers using the default or no seccomp profile on 
