Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...e705872](https://github.com/cri-o/cri-o/compare/v1.20.0...e705872165f2f44d2e9ee40fc24ec42a19aad354) on Thu, 20 May 2021 22:05:36 UTC.
+[v1.20.0...3ef4247](https://github.com/cri-o/cri-o/compare/v1.20.0...3ef4247d7037fb69f2a49133d147a211c3e0d39a) on Fri, 21 May 2021 01:16:53 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.e705872165f2f44d2e9ee40fc24ec42a19aad354.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.e705872165f2f44d2e9ee40fc24ec42a19aad354.tar.gz)
-- [cri-o.arm64.e705872165f2f44d2e9ee40fc24ec42a19aad354.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.e705872165f2f44d2e9ee40fc24ec42a19aad354.tar.gz)
+- [cri-o.amd64.3ef4247d7037fb69f2a49133d147a211c3e0d39a.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.3ef4247d7037fb69f2a49133d147a211c3e0d39a.tar.gz)
+- [cri-o.arm64.3ef4247d7037fb69f2a49133d147a211c3e0d39a.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.3ef4247d7037fb69f2a49133d147a211c3e0d39a.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -109,6 +109,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fixed bug where it was not possible to run containers using the default or no seccomp profile on 
   seccomp disabled builds/machines ([#4819](https://github.com/cri-o/cri-o/pull/4819), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed bug where runtime VM created containers never reach their `completed` state. ([#4812](https://github.com/cri-o/cri-o/pull/4812), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Reduce the permission on the listen socket to 0660 ([#4930](https://github.com/cri-o/cri-o/pull/4930), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Set conmon scope KillSignal to SIGPIPE ([#4560](https://github.com/cri-o/cri-o/pull/4560), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - This new release of ocicrypt contains new usable interfaces and thus is a new minor number. This issue details the notable features added as well as a checklist before making a new release that will be used by consuming projects. Target date for completion is 24th January.
   
