Update release notes

--- a/v1.20.2.md
+++ b/v1.20.2.md
@@ -2,6 +2,7 @@
   - [Downloads](#downloads)
   - [Changelog since v1.20.1](#changelog-since-v1201)
     - [Changes by Kind](#changes-by-kind)
+      - [Dependency-Change](#dependency-change)
       - [Bug or Regression](#bug-or-regression)
       - [Uncategorized](#uncategorized)
   - [Dependencies](#dependencies)
@@ -12,18 +13,21 @@
 # CRI-O v1.20.2
 
 The release notes have been generated for the commit range
-[v1.20.1...704b03d](https://github.com/cri-o/cri-o/compare/v1.20.1...704b03d7a451df6455a8c75f479cb078f7ec17f5) on Wed, 05 May 2021 09:00:08 UTC.
+[v1.20.1...9f7be76](https://github.com/cri-o/cri-o/compare/v1.20.1...9f7be763a83ff02a6806bed744918127f0cd4760) on Fri, 21 May 2021 06:40:44 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.704b03d7a451df6455a8c75f479cb078f7ec17f5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.704b03d7a451df6455a8c75f479cb078f7ec17f5.tar.gz)
-- [cri-o.arm64.704b03d7a451df6455a8c75f479cb078f7ec17f5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.704b03d7a451df6455a8c75f479cb078f7ec17f5.tar.gz)
+- [cri-o.amd64.9f7be763a83ff02a6806bed744918127f0cd4760.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.9f7be763a83ff02a6806bed744918127f0cd4760.tar.gz)
+- [cri-o.arm64.9f7be763a83ff02a6806bed744918127f0cd4760.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.9f7be763a83ff02a6806bed744918127f0cd4760.tar.gz)
 
 ## Changelog since v1.20.1
 
 ### Changes by Kind
+
+#### Dependency-Change
+ - Fix possible segfault when image is deleted by podman while CRI-O is listing images ([#4933](https://github.com/cri-o/cri-o/pull/4933), [@haircommander](https://github.com/haircommander))
 
 #### Bug or Regression
  - Fix a couple of FD leaks when pulling images ([#4815](https://github.com/cri-o/cri-o/pull/4815), [@haircommander](https://github.com/haircommander))
@@ -42,7 +46,7 @@ _Nothing has changed._
 ### Changed
 - github.com/containers/common: [v0.21.0 → v0.26.3](https://github.com/containers/common/compare/v0.21.0...v0.26.3)
 - github.com/containers/image/v5: [v5.10.1 → v5.10.6](https://github.com/containers/image/v5/compare/v5.10.1...v5.10.6)
-- github.com/containers/storage: [v1.24.5 → e00c943](https://github.com/containers/storage/compare/v1.24.5...e00c943)
+- github.com/containers/storage: [v1.24.5 → aa7e38b](https://github.com/containers/storage/compare/v1.24.5...aa7e38b)
 - github.com/onsi/ginkgo: [v1.14.1 → v1.14.2](https://github.com/onsi/ginkgo/compare/v1.14.1...v1.14.2)
 - github.com/syndtr/gocapability: [42c35b4 → d983527](https://github.com/syndtr/gocapability/compare/42c35b4...d983527)
 - github.com/ulikunitz/xz: [v0.5.9 → v0.5.10](https://github.com/ulikunitz/xz/compare/v0.5.9...v0.5.10)
