Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...3ef4247](https://github.com/cri-o/cri-o/compare/v1.20.0...3ef4247d7037fb69f2a49133d147a211c3e0d39a) on Fri, 21 May 2021 01:16:53 UTC.
+[v1.20.0...1baccda](https://github.com/cri-o/cri-o/compare/v1.20.0...1baccdae74a33188ecaa93b4450285e4ba3948fb) on Fri, 21 May 2021 12:59:11 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.3ef4247d7037fb69f2a49133d147a211c3e0d39a.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.3ef4247d7037fb69f2a49133d147a211c3e0d39a.tar.gz)
-- [cri-o.arm64.3ef4247d7037fb69f2a49133d147a211c3e0d39a.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.3ef4247d7037fb69f2a49133d147a211c3e0d39a.tar.gz)
+- [cri-o.amd64.1baccdae74a33188ecaa93b4450285e4ba3948fb.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.1baccdae74a33188ecaa93b4450285e4ba3948fb.tar.gz)
+- [cri-o.arm64.1baccdae74a33188ecaa93b4450285e4ba3948fb.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.1baccdae74a33188ecaa93b4450285e4ba3948fb.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -105,6 +105,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where `crio config` would print a string for `privileged_without_host_devices`, not a boolean ([#4829](https://github.com/cri-o/cri-o/pull/4829), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where server startup was significantly slowed down by attempting to clean up CNI resources after a reboot. ([#4934](https://github.com/cri-o/cri-o/pull/4934), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a segfault when CRI-O has takes more than 8 minutes to create a pod or container ([#4846](https://github.com/cri-o/cri-o/pull/4846), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix drop ALL and add back few caps behavior to not include the default configured capabilities ([#4935](https://github.com/cri-o/cri-o/pull/4935), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed a bug where image authentication failed from not finding the auth file. ([#4461](https://github.com/cri-o/cri-o/pull/4461), [@QiWang19](https://github.com/QiWang19))
  - Fixed bug where it was not possible to run containers using the default or no seccomp profile on 
   seccomp disabled builds/machines ([#4819](https://github.com/cri-o/cri-o/pull/4819), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
