Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...1f3c5cb](https://github.com/cri-o/cri-o/compare/v1.20.0...1f3c5cbf33a41ccde8d4bb9132766d9274c1ca8e) on Mon, 24 May 2021 21:36:50 UTC.
+[v1.20.0...b7e74a3](https://github.com/cri-o/cri-o/compare/v1.20.0...b7e74a328e62e0da2cf0837b17f3e2814e3210c3) on Wed, 26 May 2021 16:53:09 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.1f3c5cbf33a41ccde8d4bb9132766d9274c1ca8e.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.1f3c5cbf33a41ccde8d4bb9132766d9274c1ca8e.tar.gz)
-- [cri-o.arm64.1f3c5cbf33a41ccde8d4bb9132766d9274c1ca8e.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.1f3c5cbf33a41ccde8d4bb9132766d9274c1ca8e.tar.gz)
+- [cri-o.amd64.b7e74a328e62e0da2cf0837b17f3e2814e3210c3.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.b7e74a328e62e0da2cf0837b17f3e2814e3210c3.tar.gz)
+- [cri-o.arm64.b7e74a328e62e0da2cf0837b17f3e2814e3210c3.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.b7e74a328e62e0da2cf0837b17f3e2814e3210c3.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -145,6 +145,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/casbin/casbin/v2: [v2.1.2](https://github.com/casbin/casbin/v2/tree/v2.1.2)
 - github.com/checkpoint-restore/checkpointctl: [a2024f5](https://github.com/checkpoint-restore/checkpointctl/tree/a2024f5)
 - github.com/checkpoint-restore/go-criu/v4: [v4.1.0](https://github.com/checkpoint-restore/go-criu/v4/tree/v4.1.0)
+- github.com/checkpoint-restore/go-criu/v5: [v5.0.0](https://github.com/checkpoint-restore/go-criu/v5/tree/v5.0.0)
 - github.com/clbanning/x2j: [8252494](https://github.com/clbanning/x2j/tree/8252494)
 - github.com/containerd/aufs: [20793ff](https://github.com/containerd/aufs/tree/20793ff)
 - github.com/containerd/btrfs: [918d888](https://github.com/containerd/btrfs/tree/918d888)
@@ -164,6 +165,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/fanliao/go-promise: [1890db3](https://github.com/fanliao/go-promise/tree/1890db3)
 - github.com/franela/goblin: [c9ffbef](https://github.com/franela/goblin/tree/c9ffbef)
 - github.com/franela/goreq: [bcd34c9](https://github.com/franela/goreq/tree/bcd34c9)
+- github.com/frankban/quicktest: [v1.11.3](https://github.com/frankban/quicktest/tree/v1.11.3)
 - github.com/garyburd/redigo: [535138d](https://github.com/garyburd/redigo/tree/535138d)
 - github.com/go-errors/errors: [v1.0.1](https://github.com/go-errors/errors/tree/v1.0.1)
 - github.com/go-ini/ini: [v1.25.4](https://github.com/go-ini/ini/tree/v1.25.4)
@@ -247,10 +249,10 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/StackExchange/wmi: [5d04971 → cbe6696](https://github.com/StackExchange/wmi/compare/5d04971...cbe6696)
 - github.com/alecthomas/units: [c3de453 → f65c72e](https://github.com/alecthomas/units/compare/c3de453...f65c72e)
 - github.com/cenkalti/backoff: [v2.1.1+incompatible → v2.2.1+incompatible](https://github.com/cenkalti/backoff/compare/v2.1.1...v2.2.1)
-- github.com/cilium/ebpf: [4032b1d → v0.2.0](https://github.com/cilium/ebpf/compare/4032b1d...v0.2.0)
+- github.com/cilium/ebpf: [4032b1d → v0.5.0](https://github.com/cilium/ebpf/compare/4032b1d...v0.5.0)
 - github.com/container-storage-interface/spec: [v1.2.0 → v1.3.0](https://github.com/container-storage-interface/spec/compare/v1.2.0...v1.3.0)
 - github.com/containerd/cgroups: [0dbf7f0 → 8a68de5](https://github.com/containerd/cgroups/compare/0dbf7f0...8a68de5)
-- github.com/containerd/console: [c12b1e7 → v1.0.1](https://github.com/containerd/console/compare/c12b1e7...v1.0.1)
+- github.com/containerd/console: [c12b1e7 → v1.0.2](https://github.com/containerd/console/compare/c12b1e7...v1.0.2)
 - github.com/containerd/containerd: [v1.4.1 → v1.5.0-beta.4](https://github.com/containerd/containerd/compare/v1.4.1...v1.5.0-beta.4)
 - github.com/containerd/continuity: [0f16d7a → 50096c9](https://github.com/containerd/continuity/compare/0f16d7a...50096c9)
 - github.com/containerd/fifo: [a9fb20d → 115abcc](https://github.com/containerd/fifo/compare/a9fb20d...115abcc)
@@ -311,7 +313,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/nxadm/tail: [v1.4.4 → v1.4.8](https://github.com/nxadm/tail/compare/v1.4.4...v1.4.8)
 - github.com/onsi/ginkgo: [v1.14.1 → v1.15.2](https://github.com/onsi/ginkgo/compare/v1.14.1...v1.15.2)
 - github.com/onsi/gomega: [v1.10.3 → v1.11.0](https://github.com/onsi/gomega/compare/v1.10.3...v1.11.0)
-- github.com/opencontainers/runc: [v1.0.0-rc90 → v1.0.0-rc93](https://github.com/opencontainers/runc/compare/v1.0.0-rc90...v1.0.0-rc93)
+- github.com/opencontainers/runc: [v1.0.0-rc90 → v1.0.0-rc94](https://github.com/opencontainers/runc/compare/v1.0.0-rc90...v1.0.0-rc94)
 - github.com/opencontainers/runtime-spec: [3e4195d → 7413a7f](https://github.com/opencontainers/runtime-spec/compare/3e4195d...7413a7f)
 - github.com/opencontainers/runtime-tools: [07406c5 → d1bf3e6](https://github.com/opencontainers/runtime-tools/compare/07406c5...d1bf3e6)
 - github.com/opencontainers/selinux: [v1.6.0 → v1.8.0](https://github.com/opencontainers/selinux/compare/v1.6.0...v1.8.0)
@@ -347,7 +349,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/net: 69a7880 → d523dce
 - golang.org/x/oauth2: 9fd6049 → 01de73c
 - golang.org/x/sync: 67f06af → 036812b
-- golang.org/x/sys: 5cba982 → 47abb65
+- golang.org/x/sys: 5cba982 → d19ff85
 - golang.org/x/term: ad39bd3 → 6a3ed07
 - golang.org/x/time: 3af7569 → f8bda1e
 - golang.org/x/tools: 079ba7b → v0.1.0
